# grepshift

./: .gitignore  README.md  pyproject.toml
src/grepshift/: __main__.py
