[project]
name = "grepshift"
version = "1.3.0"
description = "Find and replace all instances of a string with a new string in a directory and all its sub-directories."
authors = [
    {name = "Steve Scholnick",email = "scholnicks@gmail.com"}
]
readme = "README.md"
license="MIT"
license-files=["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "docopt-ng (>=0.9.0,<0.10.0)"
]

[project.urls]
repository="https://github.com/scholnicks/grepshift"

[tool.poetry]
packages = [{include = "grepshift", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grepshift = "grepshift.__main__:main"
